https://github.com/awbutler/BricksGame

--- a/index.html
+++ b/index.html
@@ -134,11 +134,126 @@
                     <div class="brick blue-brick"></div>
                 </section>
             </section>
-        </div>    
+           <div id="below-board">
+               <section class="grid">
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+                   <div class="brick black-brick"></div>
+               </section>
+               <section class="grid">
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+            </section>
+            <section class="grid">
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+            </section>
+                <div id="ball">
+                </div> 
+            <section class="grid">
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                    <div id="ball">
+                    </div> 
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+            </section>
+            <section class="grid">
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+            </section>
+            <section class="grid">
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+            </section>
+            <section class="grid">
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+            </section>
+            <section class="grid">
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+                <div class="brick black-brick"></div>
+            </section>
+           </div>  
         <div id="paddle">
-        </div>    
-        <div id="ball">
-        </div>       
+        </div>          
     </main>
 </body>
 </html>
