--- a/index.html
+++ b/index.html
@@ -46,14 +46,19 @@
                 <section class="grid">
                     <div class="brick yellow-brick"></div>
                     <div class="brick yellow-brick"></div>
-                    <div class="brick black-brick"></div>
+                    <div class="brick black-brick">
+                        <div class="ball"></div>
+                    </div>
                     <div class="brick black-brick"></div>
                     <div class="brick yellow-brick"></div>
                     <div class="brick yellow-brick"></div>
                     <div class="brick yellow-brick"></div>
                     <div class="brick yellow-brick"></div>
                     <div class="brick black-brick"></div>
-                    <div class="brick black-brick"></div>
+                    <div class="brick black-brick">
+                        <div class="ball right"></div>
+
+                    </div>
                     <div class="brick yellow-brick"></div>
                     <div class="brick yellow-brick"></div>
                 </section>
@@ -151,7 +156,9 @@
                </section>
                <section class="grid">
                 <div class="brick black-brick"></div>
-                <div class="brick black-brick"></div>
+                <div class="brick black-brick">
+                    <div class="ball"></div>
+                </div>
                 <div class="brick black-brick"></div>
                 <div class="brick black-brick"></div>
                 <div class="brick black-brick"></div>
@@ -183,8 +190,6 @@
                 <div class="brick black-brick"></div>
                 <div class="brick black-brick"></div>
                 <div class="brick black-brick"></div>
-                    <div id="ball">
-                    </div> 
                 <div class="brick black-brick"></div>
                 <div class="brick black-brick"></div>
                 <div class="brick black-brick"></div>
